--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-  About Me · uday
+  About Me · udaypandey
 </title>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -96,7 +96,7 @@
     <nav class="navigation">
   <section class="container">
     <a class="navigation-title" href="/">
-      uday
+      udaypandey
     </a>
     
       <input type="checkbox" id="menu-toggle" />
@@ -144,7 +144,12 @@
 
     <p>I am a medical student from Kathmandu, Nepal.</p>
 <p>I like learning new things. 💀</p>
-<p>I&rsquo;m a beginner cinephile 🎦, a music lover 🎸, and a football fan ⚽.</p>
+<p>I&rsquo;m a</p>
+<ul>
+<li>beginner cinephile 🎦</li>
+<li>music lover 🎸</li>
+<li>football fan ⚽</li>
+</ul>
 
   </article>
 </section>
