--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>uday</title>
+  <title>udaypandey</title>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="color-scheme" content="light dark">
@@ -92,7 +92,7 @@
     <nav class="navigation">
   <section class="container">
     <a class="navigation-title" href="/">
-      uday
+      udaypandey
     </a>
     
       <input type="checkbox" id="menu-toggle" />
