--- a/contact/index.html
+++ b/contact/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-  Contact · uday
+  Contact · udaypandey
 </title>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -96,7 +96,7 @@
     <nav class="navigation">
   <section class="container">
     <a class="navigation-title" href="/">
-      uday
+      udaypandey
     </a>
     
       <input type="checkbox" id="menu-toggle" />
