--- a/about/index.html
+++ b/about/index.html
@@ -143,7 +143,7 @@
     </header>
 
     <p>I am a medical student from Kathmandu, Nepal.</p>
-<p>I like learning new things. 💀</p>
+<p>I like learning new things. 🤓</p>
 <p>I&rsquo;m a</p>
 <ul>
 <li>beginner cinephile 🎦</li>
