--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
   
     
       <li>
-        <a href="https://www.linkedin.com/in/uday-pandey1/" aria-label="LinkedIn"   >
+        <a href="https://www.linkedin.com/in/udaypandey1/" aria-label="LinkedIn"   >
           <i class="fa fa-2x fa-linkedin" aria-hidden="true"></i>
         </a>
       </li>
